2009-10-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGradient.m (-drawInRect:angle:): Correct the math by
	adding a call to abs().

2009-10-23 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSGraphicsContext.h,
	* Source/NSGraphicsContext.m: Define empty gradient methods.
	* Source/NSGradient.m: Use these methods.
	* Source/NSColor.m (-colorUsingColorSpace): Don't use isEqual: on
	color space.

2009-10-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGradient.m: Add context savig/restore and first attempt
	at geometry maths.

2009-10-23 Riccardo Mottola <rmottola@users.sf.net>
	
	* Headers/AppKit/NSBezierPath.h: added some documentation

2009-10-22 Riccardo Mottola <rmottola@users.sf.net>
	
	* Images/common_3DArrowRightH.tiff: Made background transparent,
	allows for better theming

2009-10-22 Nicolas Roard <nicolas@roard.com>

	* Source/GSThemeTools.m: Switched back extracting the individual
	images in GSDrawTiles, fixing the problem with the matrix style
	and allowing the nine patch style to work.

2009-10-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m (-colorUsingColorSpace): Add some dummy
	implementation for this method.
	* Source/NSColorSpace.m: Correct indention.
	* Header/AppKit/NSGradient.h,
	* Source/NSGradient.m: New files implementing the gui part of
	colour gradients.
	* Headers/AppKit/AppKit.h: Add include for NSGradient.h
	* Source/GNUmakefile: Add new files.
	
2009-10-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentController.m(-openDocumentWithContentsOfURL:display:,
	-openDocumentWithContentsOfURL:display:error:): Call
	-noteNewRecentDocument: instead of -noteNewRecentDocumentURL:.

	* Source/NSDocumentController.m (-_updateOpenRecentMenu): Fix an
	off by one error which would crash programs with an open recent
	menu.

2009-10-19 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSWindowDecorationView.h: add method declaration 
	so that certain compilers pick up the correct signature
